add gitignore to server

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,13 +32,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Merienda&family=Noto+Sans+KR:wght@300&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Merienda&family=Noto+Sans+KR:wght@300&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- //FIXME: try modal -->
-    <!-- <div id="modal-root"></div> -->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
